--- a/src/main/webapp/pages/MunicipalityCodeList/MunicipalityCodeList.html
+++ b/src/main/webapp/pages/MunicipalityCodeList/MunicipalityCodeList.html
@@ -11,8 +11,13 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow8_1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn8_1" padding="2em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn8_1" padding="unset unset 1em unset">
                         <wm-label name="labelHeader" class="h4" fontweight="bold" caption="bind:Variables.lvCurrentCodeSetObj.dataSet.data[$i].municipalities.municipalityName + ' Code List: ' + Variables.lvCurrentCodeSetObj.dataSet.data[$i].codeSetTitle"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow9">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn9">
+                        <wm-label padding="unset 0.5em" name="label2" caption="Displayed below is a list of all individual codes contained within the selected Code Set."></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
