Nice little bug ;) Files modified - [InspectionList]

--- a/src/main/webapp/pages/InspectionList/InspectionList.html
+++ b/src/main/webapp/pages/InspectionList/InspectionList.html
@@ -173,7 +173,7 @@
     <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="view2">
         <wm-pagedialog name="pagedialogViewInspection" title="View Inspection" oktext="Close" content="_viewInspection" class="modal-larger" modal="true" iconclass="wi wi-find-in-page">
-            <wm-param name="inspectionGuid" value="bind:Widgets.gridInspections.selecteditem.inspectionGuid" type="string"></wm-param>
+            <wm-param name="inspectionGuid" value="bind:Variables.stvInspectionGUID.dataSet.dataValue" type="string"></wm-param>
         </wm-pagedialog>
     </wm-view>
 </wm-page>
